--- a/lab3/style.css
+++ b/lab3/style.css
@@ -22,7 +22,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #f5f5f5;
-  padding: 0 3% 0 3%;
+  padding: 0 3%;
 }
 .header h1 {
   font-size: calc(var(--size) * 1.4);
